corrects spacing between PostIndexItem.jsx section.post-body and section.comment-section by removing the border from body to comments and giving comments a margin-top 11px

--- a/app/assets/stylesheets/comment.css.scss
+++ b/app/assets/stylesheets/comment.css.scss
@@ -1,3 +1,5 @@
 .comment-section {
-    background-color: #f6f7f9;
+  margin-top: 11px;
+  border-top: 1px solid #e5e5e5;
+  background-color: #f6f7f9;
 }
