--- a/app/assets/stylesheets/post-show.css.scss
+++ b/app/assets/stylesheets/post-show.css.scss
@@ -102,8 +102,7 @@ img.friend-post-img {
 }
 
 .post-tagged-friends {
-  padding: 5px 12px 14px;
-  border-bottom: 1px solid #e5e5e5;
+  padding: 5px 12px 3px;
   a {
     cursor: pointer;
     color: #365899;
